chore: Unit tests adjustments