@@ -13,6 +13,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
@@ -23,43 +28,32 @@ import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+@SpringBootTest
 class ClienteControllerTest {
 
     @Mock
-    private GetClienteAdapter getClienteAdapter;
-    @Mock
     private ClienteRepository clienteRepository;
-    @Mock
+
+    @Autowired
     private ClienteMapper clienteMapper;
-
-    @InjectMocks
-    private ClienteController clienteController;
-
-    @InjectMocks
-    PostClienteAdapter postClienteAdapter;
-
-    @InjectMocks
-    ClienteController controller;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
 
     @Test
     void shouldCadastrarClienteComSucesso() throws BaseException {
-        when(clienteRepository.findByCpf("00000000001")).thenReturn(criarClienteOptional());
-        when(postClienteAdapter.salvarCliente(any())).thenReturn(criarClienteRetorno());
+        when(clienteRepository.findByCpf(anyString())).thenReturn(Optional.empty());
+        when(clienteRepository.saveAndFlush(any())).thenReturn(new Cliente());
         ClienteDTO clienteRequest = ClienteDTO
                 .builder()
                 .nome("John Doo")
                 .email("email@email")
-                .cpf("00000000000")
+                .cpf("00000000001")
                 .build();
 
-        assertEquals(201, controller.cadastrar(clienteRequest).getStatusCode().value());
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
+        assertEquals(201, clienteController.cadastrar(clienteRequest).getStatusCode().value());
     }
 
     @Test
@@ -72,7 +66,8 @@ class ClienteControllerTest {
                 .cpf("00000000000")
                 .build();
 
-        assertThrows(ClienteException.class, () -> controller.cadastrar(clienteRequest));
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
+        assertThrows(ClienteException.class, () -> clienteController.cadastrar(clienteRequest));
     }
 
     @Test
@@ -82,7 +77,9 @@ class ClienteControllerTest {
                 .email("email@email")
                 .cpf("00000000000")
                 .build();
-        assertThrows(ClienteException.class, () -> controller.cadastrar(clienteRequest));
+
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
+        assertThrows(ClienteException.class, () -> clienteController.cadastrar(clienteRequest));
     }
 
     @Test
@@ -92,7 +89,9 @@ class ClienteControllerTest {
                 .nome("John Doo")
                 .cpf("00000000000")
                 .build();
-        assertThrows(ClienteException.class, () -> controller.cadastrar(clienteRequest));
+
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
+        assertThrows(ClienteException.class, () -> clienteController.cadastrar(clienteRequest));
     }
 
     @Test
@@ -102,7 +101,9 @@ class ClienteControllerTest {
                 .nome("John Doo")
                 .email("email@email")
                 .build();
-        assertThrows(ClienteException.class, () -> controller.cadastrar(clienteRequest));
+
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
+        assertThrows(ClienteException.class, () -> clienteController.cadastrar(clienteRequest));
     }
 
     private ClienteDTO criarClienteRetorno() {
@@ -125,15 +126,18 @@ class ClienteControllerTest {
 
     @Test
     void shouldReturnNoContentWhenListarTodosClientesAndNoClientesExist() {
-        when(getClienteAdapter.listarClientes(0, 10, null, null)).thenReturn(Collections.emptyList());
+        when(clienteRepository.findAll(Pageable.ofSize(10))).thenReturn(Page.empty());
+
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
         ResponseEntity<List<ClienteDTO>> response = clienteController.listarTodosClientes(0, 10, null, null);
         assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
     }
 
     @Test
     void shouldReturnOkWhenListarTodosClientesAndClientesExist() {
-        List<ClienteDTO> clientes = Collections.singletonList(new ClienteDTO());
-        when(getClienteAdapter.listarClientes(0, 10, null, null)).thenReturn(clientes);
+        when(clienteRepository.findAll(Pageable.ofSize(10))).thenReturn(new PageImpl<>(List.of(new Cliente())));
+
+        ClienteController clienteController = new ClienteController(clienteRepository, clienteMapper);
         ResponseEntity<List<ClienteDTO>> response = clienteController.listarTodosClientes(0, 10, null, null);
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
